--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,24 @@
 .divStyle {
-    color: white;
     background-color: red;
-    padding: 100px;
-    margin: 100px;
-    border: 20px solid black;
+    color: white;
+    width: 500px;
+    height: 200px;
+}
+
+.divStyle1 {
+    background-color: red;
+    color: white;
+}
+
+.spanStyle {
+    background-color: red;
+    color: white;
+    height: 100px;
+    width: 100px;
+    display: inline-block;
+}
+
+
+.parent{
+    width: 500px;
 }
